[package]
name = "mtd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite3 = "0.24.0"
regex = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
indicatif = "0.17.1"
sha256 = "1.1.1"
base64 = "0.13.1"
hex = { version = "0.4", default-features = false }